# caixaenginyers-heatmap-demo

./: README.md  RUNNING_THE_APP.md  json_to_csv.py  pyproject.toml  run_app.py
app data/: .env  streamlit_app_scored.py
data/: banks-by-population.csv  household_municipality.csv  merged_es.csv  merged_es_dropna.csv  merged_es_imputed.csv  municipalities_with_coordinates.csv  out_with_scores.csv  popu_growth_population.csv  zones.csv
scripts/: .env  SCORING_METHODOLOGY.md  apply_scoring_pipeline.py  apply_scoring_to_data.py  clean_and_normalize_scores.py  gemini_with_system_prompt.py  geodesic_dist.py  merged_es_dropna.csv  moving_average.py  municipalities_components.html  pareto_optimal.py  planning_van.py  scores.py  scoring_pca.py
scripts/cache/: api-26fdf48519eb024006303c9fca678ba88b10ac0f
scripts/images/: best_matches_pareto.txt
utils/: 02_Infográfico_y_Mapa.py  drop_rows_with_nan.py  impute_from_neighbors.py  infographic.py  make_infographics.py  merge_all.py  normalization.py  projections.py
