[project]
name = "caixaenginyers-heatmap-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopy>=2.4.1",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.7",
    "scikit-learn>=1.7.2",
    "pyarrow>=22.0.0",
    "streamlit>=1.50.0",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
]
